--- a/miniproject4/main/templates/main/home.html
+++ b/miniproject4/main/templates/main/home.html
@@ -3,33 +3,12 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to the Home Page</h1>
-<p>This is the home page of your Django app.</p>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch Demo Modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        This is the content of your modal.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
+<div class="jumbotron text-center">
+    <h1 class="display-4">Welcome to My Freelance Services</h1>
+    <p class="lead">I provide top-notch services in [Your Field].</p>
+    <hr class="my-4">
+    <p>Check out my services and portfolio to see what I can do for you.</p>
+    <a class="btn btn-primary btn-lg" href="{% url 'services' %}" role="button">View Services</a>
 </div>
 
 {% endblock %}
